Add favicon and new article section
Added a favicon link and a new article about Zohran Mamdani.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Adam Benson — Published Works</title>
+  <link rel="icon" type="image/png" href="fountain-pen-close-up.png">
+  <!-- Icon "Write" by Freepik from Flaticon: https://www.flaticon.com/free-icons/write -->
   <style>
     :root{
       --accent: #0b63d3;
@@ -155,6 +157,15 @@
     </header>
 
     <main>
+      <article class="card">
+        <img src="lenin.webp" alt="Lenin-speech" class="article-thumb">
+        <h2><a class="link" href="https://politicalreview.byu.edu/november-2025/zohran-mamdani-a-socialist-gift-to-the-republican-party" target="_blank" rel="noopener noreferrer">
+        Zohran Mamdani: A Socialist Gift to the Republican Party
+        </a></h2>
+        <div class="meta">BYU Political Review — November 2025</div>
+        <p>The article warns that Zohran Mamdani’s embrace of socialist policies poses a danger to America’s economic and political stability, offering Republicans an easy target while pulling Democrats further toward radical ideas.</p>
+      </article>
+      
       <article class="card">
         <img src="declaration.JPG" alt="Endowed by Our Creator" class="article-thumb">
         <h2><a class="link" href="https://politicalreview.byu.edu/october-2025/endowed-by-our-creator-why-rights-come-from-our-god-not-our-government" target="_blank" rel="noopener noreferrer">Endowed by Our Creator: Why Rights Come from Our God, Not Our Government &#8599;</a></h2>
