Update favicon and comment in index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Adam Benson — Published Works</title>
-  <link rel="icon" type="image/png" href="fountain-pen-close-up.png">
-  <!-- Icon "Write" by Freepik from Flaticon: https://www.flaticon.com/free-icons/write -->
+  <link rel="icon" type="image/png" href="notebook.png">
+  <!-- Icon "Notebook" by Ylivdesign from Flaticon: https://www.flaticon.com/free-icons/notebook -->
   <style>
     :root{
       --accent: #0b63d3;
