Update article meta description in index.html

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <h2><a class="link" href="https://politicalreview.byu.edu/november-2025/zohran-mamdani-a-socialist-gift-to-the-republican-party" target="_blank" rel="noopener noreferrer">
         Zohran Mamdani: A Socialist Gift to the Republican Party
         </a></h2>
-        <div class="meta">BYU Political Review — November 2025</div>
+        <div class="meta">BYU Political Review — November 2025 Edition</div>
         <p>The article warns that Zohran Mamdani’s embrace of socialist policies poses a danger to America’s economic and political stability, offering Republicans an easy target while pulling Democrats further toward radical ideas.</p>
       </article>
       
